--- a/src/Components/SideMenu/SideMenu.css
+++ b/src/Components/SideMenu/SideMenu.css
@@ -1,5 +1,5 @@
 .SideMenu--Wrapper {
-  background-color: #92bdee;
+  background-color: #3c4044;
   align-content: space-around;
   min-width: 10vw;
   min-height: 100vh;
