--- a/src/Components/ClassRoom/ClassRoom.css
+++ b/src/Components/ClassRoom/ClassRoom.css
@@ -1,11 +1,13 @@
 .ClassRoom__Play{
   margin-top:30px;
   margin-left: 30px;
+  width: 70vw;
+  height: 70vh;
 }
 
 .Classroom__StateHolder{
-  width: 70vw;
-  height: 70vh;
+  width: 100vw;
+  height: 100vh;
 }
 
 .ClassRoom__SongInfoPanel{
@@ -15,4 +17,26 @@
 .ClassRoom__SongInfo {
   color: #3c4044;
   font-size: calc(8px + 2vmin);
+}
+
+.ClassRoom__Message {
+  color: #3c4044;
+  font-size: calc(8px + 2vmin);
+}
+
+.ClassRoom__MessageHolder{
+  margin-top:30px;
+}
+
+.ClassRoom--Button {
+  margin-top:30px;
+  padding: 10px 20px 10px 20px;
+  background-color: #3c4044;
+  color: white;
+  border-radius: 5px;
+}
+
+.ClassRoom--Button:hover {
+  background-color: #9392ee;
+  color: white;
 }
