--- a/src/Components/AppHeader/AppHeader.css
+++ b/src/Components/AppHeader/AppHeader.css
@@ -10,6 +10,23 @@
   flex-direction: row;
 }
 
+.App-Header-Profile__Border {
+  border-radius: 5px;
+  border: white 1px solid;
+  padding: 10px;
+  margin-top: 5px;
+}
+
+.App-Header-Profile__Name {
+  color: white;
+  font-size: 16px;
+}
+
+.App-header-Profile__Credits {
+  color: white;
+  font-size: 16px;
+}
+
 .App-header--Button {
   padding: 10px 20px 10px 20px;
   background-color: white;
@@ -24,10 +41,37 @@
 
 .App-Header-links{
   margin-right: 30vw;
-}
 
+}
 .App-Header-Link{ 
   margin-right: 30px;
+}
+
+.App-Header-Profile {
+  margin-right: 50px;
+}
+
+.App-Header-Menu {
+  margin-right: 50px;
+}
+
+@media screen and (max-width: 800px) {
+  .App-Header-links{
+    margin: auto;
+    padding: auto;
+  }
+
+  .App-Header-Link{ 
+    margin-right: 5px;
+  }
+
+  .App-Header-Profile {
+    margin-right: 10px;
+  }
+  
+  .App-Header-Menu {
+    margin-right: 10px;
+  }
 }
 
 a, u {
@@ -40,10 +84,3 @@ a:hover {
 }
 
 
-.App-Header-Profile {
-  margin-right: 50px;
-}
-
-.App-Header-Menu {
-  margin-right: 50px;
-}
