--- a/src/Components/SideMenu/SideMenu.css
+++ b/src/Components/SideMenu/SideMenu.css
@@ -35,7 +35,6 @@ button.SideMenu--Category:active {
   cursor: pointer;
   transition: 0.3s;
   padding: 8px;
-  margin: 0 10 0 10;
   background-color: white;
   color: #92bdee;
 }
@@ -56,4 +55,11 @@ button.SideMenu-MenuItem:active {
 
 .SideMenu-MenuItem--shown {
   display: block;
+}
+
+
+@media screen and (max-width: 800px) {
+  .SideMenu--Wrapper {
+    min-width: 70px;
+  }
 }
