--- a/src/Components/AppHeader/AppHeader.css
+++ b/src/Components/AppHeader/AppHeader.css
@@ -3,11 +3,12 @@
   min-height: 10vh;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: flex-start;
   font-size: calc(8px + 2vmin);
   color: white;
   padding-bottom: 10px;
   flex-direction: row;
+  width: 100%;
 }
 
 .App-Header-Profile__Border {
@@ -40,37 +41,37 @@
 }
 
 .App-Header-links{
-  margin-right: 30vw;
-
+  margin-left: 300px;
 }
+
 .App-Header-Link{ 
-  margin-right: 30px;
+  margin-left: 30px;
 }
 
 .App-Header-Profile {
-  margin-right: 50px;
+  margin-left: 40vw;
 }
 
 .App-Header-Menu {
-  margin-right: 50px;
+  margin-left: 50px;
 }
 
-@media screen and (max-width: 800px) {
+/* iPad Pro */
+@media screen and (max-width: 1024px) {
   .App-Header-links{
-    margin: auto;
-    padding: auto;
+    margin-left: 30px;
   }
 
   .App-Header-Link{ 
-    margin-right: 5px;
+    margin-left: 30px;
   }
 
   .App-Header-Profile {
-    margin-right: 10px;
+    margin-left: 300px;
   }
   
   .App-Header-Menu {
-    margin-right: 10px;
+    margin-left: 50px;
   }
 }
 
@@ -82,5 +83,51 @@ a, u {
 a:hover {
   color: #9392ee;
 }
+
+/* iPad */
+@media screen and (max-width: 768px) {
+  .App-Header-links{
+    margin-left: 20px;
+  }
+
+  .App-Header-Link{ 
+    margin-left: 20px;
+  }
+
+  .App-Header-Profile {
+    margin-left: 100px;
+  }
+  
+  .App-Header-Menu {
+    margin-left: 50px;
+  }
+}
+
+/* Mobile */
+@media screen and (max-width: 630px) {
+  .App-Header-links{
+    margin-left: 5px;
+  }
+
+  .App-Header-Link{ 
+    margin-left: 5px;
+  }
+
+  .App-Header-Profile {
+    margin-left: 5px;
+  }
+  
+  .App-Header-Menu {
+    margin-left: 5px;
+  }
+}
+
+
+
+a, u {
+  color: white;
+  text-decoration: none;
+}
+
 
 
