--- a/src/Components/AppHeader/AppHeader.css
+++ b/src/Components/AppHeader/AppHeader.css
@@ -6,7 +6,6 @@
   justify-content: flex-start;
   font-size: calc(8px + 2vmin);
   color: white;
-  padding-bottom: 10px;
   flex-direction: row;
   width: 100%;
 }
@@ -15,7 +14,8 @@
   border-radius: 5px;
   border: white 1px solid;
   padding: 10px;
-  margin-top: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .App-Header-Profile__Name {
@@ -44,9 +44,22 @@
   margin-left: 300px;
 }
 
+
 .App-Header-Link{ 
   margin-left: 30px;
 }
+
+.App-Header-Link--desktop {
+  display: inline-block;
+}
+
+.App-Header-Link--mobile {
+  display: none;
+  width: 40px;
+  height: 40px;
+  margin-right: 5px;
+}
+
 
 .App-Header-Profile {
   margin-left: 40vw;
@@ -84,6 +97,12 @@ a:hover {
   color: #9392ee;
 }
 
+img {
+  width: 30px;
+  height: 30px;
+  border-radius: 20px;
+}
+
 /* iPad */
 @media screen and (max-width: 768px) {
   .App-Header-links{
@@ -119,6 +138,18 @@ a:hover {
   
   .App-Header-Menu {
     margin-left: 5px;
+  }
+
+  .App-Header-Link--desktop {
+    display: none;
+  }
+  
+  .App-Header-Link--mobile {
+    display: inline-block;
+  }
+
+  .App-Header-Profile__Border {
+    max-width: 50px;
   }
 }
 
