--- a/src/Components/ClassRoom/ClassRoom.css
+++ b/src/Components/ClassRoom/ClassRoom.css
@@ -55,9 +55,35 @@
   color: white;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1024px) {
   .ClassRoom__Play {
+    display: block;
+    margin-left: 10px;
+    width: 90%;
+    height: 50vh;
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  .ClassRoom__Play {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top:5px;
+    width: 100%;
+    height: 70vh;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .ClassRoom__Play {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
     margin-top:5px;
     margin-left: 5px;
+    width: 100%;
+    height: 70vh;
   }
 }
