--- a/src/Components/SideMenuControlPanel/SideMenuControlPanel.css
+++ b/src/Components/SideMenuControlPanel/SideMenuControlPanel.css
@@ -1,3 +1,7 @@
+.SideMenuControlPanel {
+  background-color: #3c4044; 
+}
+
 .SideMenuControlPanel__Header {
   background-color: #3c4044; 
   color: white;
